k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-react-app
  template:
    metadata:
      labels:
        app: simple-react-app
    spec:
      containers:
        - name: simple-react-app
          image: 'gcr.io/learn-gcloud-build-123/simple-react-app'
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simple-react-app-service
spec:
  selector:
    app: simple-react-app
  ports:
    - name: auth
      protocol: TCP
      port: 80
      targetPort: 80


# NodePort service for local development only
---
apiVersion: v1
kind: Service
metadata:
  name: entrypoint
spec:
  type: NodePort
  selector:
    app: simple-react-app
  ports:
  # Nginx port
  - port: 80
    name: nginx-port
    targetPort: 80
    nodePort: 30001
  # React dev server port
  - port: 3000
    name: react-dev-server-port
    targetPort: 3000
    nodePort: 30003
