k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: react.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-react-app-service
                port:
                  number: 80
